test/error/syntax_error.imp
# Simple syntax error test
PROGRAM IS
    var
IN
    READ var;
    WRITE var;
NED
